# stitch

./: .gitignore  1.yuv  CMakeLists.txt  LICENSE  Makefile  README.en.md  README.md  README_EN.md  StitchAPI.cpp  build_install.sh  cpp_exposure_to_c.cpp  install.sh  lib.cpp  main.cpp  main_cam.cpp  main_ui.cpp  read_buchong.md  set_env.sh  share_example.c  start_camera.sh  start_split.sh  stitch_shared.c  stitch_shared.cpp
camera_manager/: CMakeLists.txt  README.en.md  README.md  README_EN.md
camera_manager/include/: AVFrameProducer.h  AVFrameProducer_debug.h  AVPacketProducer.h  AVPacketProducer_debug.h  CallbackConsumer.h  Channel.h  Consumer.h  DecoderConsumer.h  EncoderConsumer.h  IStitch.h  JetsonDecoderConsumer.h  KernelTest.h  LogConsumer.h  MP4PacketProducer.h  PacketProducer.h  Pipeline.h  Producer.h  RTSPPacketProducer.h  ResizeConsumer.h  RtspConsumer.h  SingleViewConsumer.h  StitchConsumer.h  StitchImpl.h  TaskManager.h  TestPacketProducer.h  USBPacketProducer.h  YUVFrameReader.h  camera_manager.h  cuda_handle_init.h  detector.h  image_decoder.h  image_encoder.h
camera_manager/src/: AVFrameProducer.cpp  AVFrameProducer_debug.cpp  AVPacketProducer.cpp  AVPacketProducer_debug.cpp  CallbackConsumer.cpp  Channel.cpp  Consumer.cpp  DecoderConsumer.cpp  EncoderConsumer.cpp  JetsonDecoderConsumer.cpp  KernelTest.cpp  LogConsumer.cpp  MP4PacketProducer.cpp  PacketProducer.cpp  Pipeline.cpp  Producer.cpp  RTSPPacketProducer.cpp  ResizeConsumer.cpp  RtspConsumer.cpp  SingleViewConsumer.cpp  StitchConsumer.cpp  TaskManager.cpp  TestPacketProducer.cpp  USBPacketProducer.cpp  YUVFrameReader.cpp  camera_manager.cpp  cuda_handle_init.cpp  detector.cpp  image_decoder.cpp  image_encoder.cpp
components/: CMakeLists.txt  README.en.md  README.md
components/qt/: CMakeLists.txt
components/qt/include/: detection_render.h  detection_widget.h  full_stitch_widget.h  infrared_camera_widget.h  mainwindow.h  nv12render.h  visible_camera_widget.h  visible_single_camera_widget.h  widget.h  widget_for_test.h
components/qt/src/: detection_render.cpp  detection_widget.cpp  full_stitch_widget.cpp  infrared_camera_widget.cpp  mainwindow.cpp  nv12render.cpp  visible_camera_widget.cpp  visible_single_camera_widget.cpp  widget.cpp  widget_for_test.cpp
components/shm/: CMakeLists.txt
components/shm/include/: ShmCommon.h  ShmReceiver.h  ShmSender.h
components/shm/src/: ShmReceiver.cpp  ShmSender.cpp
components/shm1/include/: shm.h
components/shm1/src/: shm.cpp
core/: CMakeLists.txt  README.en.md  README.md
core/config/: CMakeLists.txt
core/config/include/: config.h
core/config/src/: config.cpp
core/data_processing/: CMakeLists.txt
core/data_processing/include/: IStitch.h  Stitch.h  StitchImpl.h  image_decoder.h  image_encoder.h
core/data_processing/src/: Stitch.cpp  cuda_handle_init.cpp  image_decoder.cpp  image_encoder.cpp
core/operator/: CMakeLists.txt  README.md
core/operator/include/: nvidia_kernel.h  operator_ascend.h
core/operator/include/nvidia/: resize.cuh  scale.cuh  stitch.cuh  stitch_raw.cuh  stitch_raw_yuv420p.cuh  stitch_with_crop.cuh  stitch_with_h_matrix_inv.cuh  stitch_with_h_matrix_inv_v2.cuh  stitch_with_mapping_table.cuh  stitch_with_mapping_table_yuv420p.cuh  yuv_2_rgb.cuh
core/operator/include/nvidia/h_matrix_inv/: h_matrix_inv.h  stitch_with_h_matrix_inv.cuh  stitch_with_h_matrix_inv_v1.1.cuh  stitch_with_h_matrix_inv_v2.cuh
core/operator/src/ascend/: launch_stitch_kernel_raw.cpp
core/operator/src/nvidia/: resize.cu  scale.cu  stitch.cu  stitch_raw.cu  stitch_raw_yuv420p.cu  stitch_with_crop.cu  stitch_with_h_matrix.cu  stitch_with_h_matrix_inv.cu  stitch_with_h_matrix_inv_v2.cu  stitch_with_mapping_table.cu  stitch_with_mapping_table_yuv420p.cu  yuv_2_rgb.cu
core/operator/src/nvidia/h_matrix_inv/: stitch_with_h_matrix_inv.cu  stitch_with_h_matrix_inv_v1.1.cu  stitch_with_h_matrix_inv_v2.cu
core/qt/: CMakeLists.txt
core/qt/include/: Nv12Render.h  mainwindow.h
core/qt/src/: Nv12Render.cpp  mainwindow.cpp
core/rtsp/: CMakeLists.txt
core/rtsp/include/: rtsp.h
core/rtsp/share/mediamtx/: mediamtx.yml
core/rtsp/src/: rtsp.cpp
core/safe_tools/: safe_queue.hpp  tools.hpp
core/shm/: CMakeLists.txt
core/shm/include/: shm.h
core/shm/src/: shm.cpp
core/stitch/: CMakeLists.txt
core/stitch/include/: Stitch.h  cuda_handle_init.h  image_decoder.h  image_encoder.h  stitch.cuh  stitch.h
core/stitch/src/: Stitch.cpp  image_decoder.cpp  image_encoder.cpp  scale.cu  stitch.cpp  stitch.cu
core/utils/: CMakeLists.txt
core/utils/include/: list_queue.hpp  log.hpp  safe_list.h  safe_queue.hpp  tools.hpp
core/utils/src/: tools.cpp
docs/: DEBUG运行步骤详解.md  LogConsumer编写说明.md  入门该项目.md  关于距离对拼接产生的误差.md  如何添加新的配置文件.md  柱面投影建模.md
inc/: StitchAPI.h  StitchTypes.h  manage_api.h  safe_queue.hpp  stitch.h  stitch_app.h  stitch_types.h
install/include/: manage_api.h  stitch_types.h
install/lib/: libVisionEngine.so.1  libVisionEngine.so.1.0.0
resource/: README.md  cam10.json  cam10_jetson.json  cam2.json  cam5.json  cam_test.json  hk.json  hk5.json  hk8.json  kernel_test.json
resource/cam10/: group0_mainstream.json  group0_substream.json  group1_mainstream.json  group1_substream.json
resource/cam5/: group_mainstream.json  group_substream.json
resource/hk8/: group0_mainstream.json  group0_substream.json  group1_substream.json
rtsp/: CMakeLists.txt
rtsp/include/: rtsp.h
rtsp/src/: rtsp.cpp
safe_tools/: safe_queue.hpp  tools.hpp
scripts/: plot_timing.py
scripts/H_matrix/: Match.py  stitch.py
scripts/H_matrix/mapping_table/: mapping_table_generation.py
scripts/git-hooks/: commit-msg  install-git-hooks.sh
scripts/mapping_table/: CMakeLists.txt  compute_mapping_table.cpp  mapping_table_generation.py  映射表使用说明.md
src/: CMakeLists.txt  cpp_exposure_to_c.cpp
stitch/: CMakeLists.txt
stitch/include/: Stitch.h  cuda_handle_init.h  cuda_init.h  image_decoder.h  image_encoder.h  stitch.cuh
stitch/src/: Stitch.cpp  cuda_handle_init.cpp  image_decoder.cpp  image_encoder.cpp  stitch.cu
